--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,12 @@ set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 set( SOURCE
 
-src/Main.cpp
+src/BaseGameState.cpp
+src/CTexture.cpp
 src/Global.cpp
 src/Logger.cpp
+src/Main.cpp
 src/SettingsHandler.cpp
-src/BaseGameState.cpp
 src/StateSettings.cpp
 src/StateTest.cpp
 
@@ -20,5 +21,6 @@ add_executable( ${PROJECT_NAME} ${SOURCE} )
 
 INCLUDE( FindPkgConfig )
 PKG_SEARCH_MODULE( SDL2 REQUIRED sdl2 )
+PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
 INCLUDE_DIRECTORIES( ${SDL2_INCLUDE_DIRS} )
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SDL2_LIBRARIES} )
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
