--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required( VERSION 3.0 )
 project( "achtung" )
 
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin )
 
 set( SOURCE
 
@@ -14,6 +15,8 @@ src/PlayerThing.cpp
 src/SettingsHandler.cpp
 src/StateSettings.cpp
 src/StateTest.cpp
+src/Thing.cpp
+src/TrailThing.cpp
 
 )
 
