--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required( VERSION 3.0 )
 
 set( LIB_GAME_SOURCE
   PlayerThing.cpp
-  StateTest.cpp
+  StateGame.cpp
   Thing.cpp
   TrailThing.cpp
 )
