Create subdirectory for game logic

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required( VERSION 3.0 )
 
-add_subdirectory( inc/ )
 include_directories( inc/ )
+include_directories( game/inc/ )
 
-set( SOURCE
+add_subdirectory( inc/ )
+add_subdirectory( game/ )
+
+set( MAIN_SOURCE
   BaseGameState.cpp
   Texture.cpp
   Global.cpp
   Logger.cpp
   Main.cpp
-  PlayerThing.cpp
   SettingsHandler.cpp
   StateSettings.cpp
-  StateTest.cpp
-  Thing.cpp
-  TrailThing.cpp
 )
 
-add_executable( ${PROJECT_NAME} ${SOURCE} )
+add_executable( ${PROJECT_NAME} ${MAIN_SOURCE} $<TARGET_OBJECTS:libGame> )
 target_link_libraries( ${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} )
