Prepare sandbox testing game state + fix line endings

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required( VERSION 3.0 )
 set( LIB_GAME_SOURCE
   PlayerThing.cpp
   StateGame.cpp
+  StateSandbox.cpp
   Thing.cpp
   TrailThing.cpp
 )
