Prepare unit testing environment

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,7 @@
-cmake_minimum_required( VERSION 3.0 )
-
-include_directories( inc/ )
-include_directories( game/inc/ )
-
 add_subdirectory( inc/ )
 add_subdirectory( game/ )
 
-set( MAIN_SOURCE
+set( CORE_SOURCE
   BaseGameState.cpp
   Texture.cpp
   Global.cpp
@@ -16,5 +11,6 @@ set( MAIN_SOURCE
   StateSettings.cpp
 )
 
-add_executable( ${PROJECT_NAME} ${MAIN_SOURCE} $<TARGET_OBJECTS:libGame> )
+add_library( libCore OBJECT ${CORE_SOURCE} )
+add_executable( ${PROJECT_NAME} $<TARGET_OBJECTS:libCore> $<TARGET_OBJECTS:libGame> $<TARGET_OBJECTS:libCollisions> )
 target_link_libraries( ${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} )
