Rip out misguided attempt at implementation of collisions. Let's use library for this.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(Game/)
 
-set(CORE_SOURCE
+set(APP_CORE_SOURCE
     Application.cpp
     Texture.cpp
     Global.cpp
@@ -10,6 +10,6 @@ set(CORE_SOURCE
     StateSettings.cpp
 )
 
-add_library(libCore OBJECT ${CORE_SOURCE})
-add_executable(${PROJECT_NAME} $<TARGET_OBJECTS:libCore> $<TARGET_OBJECTS:libGame> $<TARGET_OBJECTS:libCollisions>)
+add_library(app_core OBJECT ${APP_CORE_SOURCE})
+add_executable(${PROJECT_NAME} $<TARGET_OBJECTS:app_core> $<TARGET_OBJECTS:game>)
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
