Minor improvements to cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ pkg_search_module(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
 
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2IMAGE_INCLUDE_DIRS})
+include_directories(${CMAKE_BINARY_DIR}/generated_include)
 include_directories(include)
 
 enable_testing()
@@ -20,3 +21,6 @@ add_subdirectory(src)
 add_subdirectory(include)
 add_subdirectory(external)
 add_subdirectory(tests)
+
+add_executable(${PROJECT_NAME} $<TARGET_OBJECTS:app_core> $<TARGET_OBJECTS:game>)
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
