--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_subdirectory(googletest)
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ../src/)
+# googletest
+add_subdirectory(googletest EXCLUDE_FROM_ALL)
+# include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ../src/)
+
+# libfmt
+add_subdirectory(fmt EXCLUDE_FROM_ALL)
