Reimplement logging with fmtlib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,10 +4,9 @@ set(APP_CORE_SOURCE
     Application.cpp
     Texture.cpp
     Global.cpp
-    Log.cpp
     Main.cpp
     SettingsHandler.cpp
 )
 
 add_library(app_core OBJECT ${APP_CORE_SOURCE})
-target_link_libraries(app_core PRIVATE fmt::fmt)
+target_link_libraries(app_core PRIVATE fmt::fmt-header-only)
