Gut SDL from the project

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -3,4 +3,4 @@ add_subdirectory(googletest EXCLUDE_FROM_ALL)
 # include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ../src/)
 
 # libfmt
-add_subdirectory(fmt)
+add_subdirectory(fmt EXCLUDE_FROM_ALL)
