--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(game/)
 set(APP_CORE_SOURCE
     Application.cpp
     Texture.cpp
-    Global.cpp
+    Utils.cpp
     Main.cpp
     SettingsHandler.cpp
 )
