--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
 
 find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
+find_package(TGUI 0.8 REQUIRED)
 
 include_directories(${CMAKE_BINARY_DIR}/generated_include)
 include_directories(include)
@@ -19,4 +20,4 @@ add_subdirectory(external)
 add_subdirectory(tests)
 
 add_executable(${PROJECT_NAME} $<TARGET_OBJECTS:app_core> $<TARGET_OBJECTS:game> $<TARGET_OBJECTS:menu>)
-target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics)
+target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics tgui)
