Player info is now passed from menu to game

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(GAME_SOURCE
     BorderThing.cpp
-    PlayerThing.cpp
+    Player.cpp
     StateGame.cpp
     StateSandbox.cpp
     TrailThing.cpp
