Powerups now spawn that players can pick up (no effects yet)

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(GAME_SOURCE
     BorderThing.cpp
     Player.cpp
+    PowerupThing.cpp
     StateGame.cpp
-    StateSandbox.cpp
     TrailThing.cpp
 )
 
