Buggy implementation of powerup effects

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(GAME_SOURCE
     BorderThing.cpp
     Player.cpp
-    PowerupThing.cpp
+    PickMeUp.cpp
     StateGame.cpp
     TrailThing.cpp
 )
