--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,16 @@
-cmake_minimum_required(VERSION 3.0)
-project("freeachtung")
+cmake_minimum_required(VERSION 3.13)
+project("freeachtung" VERSION 0.1.0 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-narrowing")
+add_subdirectory(external)
 
 find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
 find_package(TGUI 0.8 REQUIRED)
 
-include_directories(${CMAKE_BINARY_DIR}/generated_include)
-include_directories(include)
-
-enable_testing()
-option(BUILD_GMOCK "" OFF)
-option(BUILD_GTEST "" ON)
+add_executable(${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics tgui fmt::fmt)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_BINARY_DIR}/generated_include include)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wpedantic -Wextra -Werror -Wno-narrowing)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
 add_subdirectory(src)
-add_subdirectory(include)
-add_subdirectory(external)
-add_subdirectory(tests)
-
-add_executable(${PROJECT_NAME} $<TARGET_OBJECTS:app_core> $<TARGET_OBJECTS:game> $<TARGET_OBJECTS:menu>)
-target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics tgui)
+add_subdirectory(include/app)
