--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,6 +1,1 @@
-# googletest
-add_subdirectory(googletest EXCLUDE_FROM_ALL)
-# include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ../src/)
-
-# libfmt
-add_subdirectory(fmt EXCLUDE_FROM_ALL)
+add_subdirectory(fmt)
