--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,10 +1,7 @@
-set(GAME_SOURCE
+target_sources(${PROJECT_NAME} PUBLIC
     BorderThing.cpp
     Player.cpp
     PickMeUp.cpp
     StateGame.cpp
     TrailThing.cpp
 )
-
-add_library(game OBJECT ${GAME_SOURCE})
-target_link_libraries(game PRIVATE fmt::fmt-header-only)
