Read configuration from toml file

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(${PROJECT_NAME} PUBLIC
     Application.cpp
+    ConfigManager.cpp
     ResourceManager.cpp
-    SettingsManager.cpp
     Utils.cpp
 )
