Loading and releasing textures with asset manager

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(${PROJECT_NAME} PUBLIC
+    AssetManager.cpp
     Application.cpp
     ConfigManager.cpp
-    ResourceManager.cpp
     Utils.cpp
 )
