Load player profile info from database

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -2,6 +2,6 @@ target_sources(${PROJECT_NAME} PUBLIC
     AssetManager.cpp
     Application.cpp
     ConfigManager.cpp
-    SQLite.cpp
+    ProfileManager.cpp
     Utils.cpp
 )
