--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(${PROJECT_NAME} PRIVATE
     Main.cpp
 )
 
+add_subdirectory(app)
 add_subdirectory(game)
 add_subdirectory(menu)
-add_subdirectory(app)
+add_subdirectory(sql)
