--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,9 +1,4 @@
 target_sources(${PROJECT_NAME} PUBLIC
-    BorderThing.cpp
-    Engine.cpp
-    Player.cpp
-    PickMeUp.cpp
     StateGame.cpp
-    TimerService.cpp
-    TrailThing.cpp
+    StateSandbox.cpp
 )
