--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(${PROJECT_NAME} PUBLIC
+target_sources(achtung_app PRIVATE
     AssetManager.cpp
     Application.cpp
     ConfigManager.cpp
