--- a/src/menu/CMakeLists.txt
+++ b/src/menu/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(${PROJECT_NAME} PUBLIC
+target_sources(achtung_app PRIVATE
     LobbyPanel.cpp
     ProfilePanel.cpp
     SettingsPanel.cpp
