Tests and sandbox run with predefined input sequences Added test for broken speed powerups

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(achtung_app PRIVATE
     BorderThing.cpp
     Engine.cpp
     EngineTestable.cpp
+    InputSequence.cpp
     Player.cpp
     PickMeUp.cpp
     TimerService.cpp
