Remove Wno-narrowing flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ endif(MSVC)
 if(MSVC)
 	set(COMPILE_OPTIONS /W0)
 else(MSVC)
-	set(COMPILE_OPTIONS -Wall -Wpedantic -Wextra -Werror -Wno-narrowing)
+	set(COMPILE_OPTIONS -Wall -Wpedantic -Wextra -Werror)
 endif(MSVC)
 
 if (NOT MSVC)
@@ -28,7 +28,7 @@ add_executable(${PROJECT_NAME})
 add_subdirectory(src)
 add_subdirectory(include/app)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE freeachtung_app)
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_BINARY_DIR}/generated_include include)
-target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+target_link_libraries(${PROJECT_NAME} PUBLIC freeachtung_app)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_BINARY_DIR}/generated_include include)
+target_compile_options(${PROJECT_NAME} PUBLIC ${COMPILE_OPTIONS})
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
