--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
     
     - name: Build
       run: |
-        cmake -DCMAKE_TOOLCHAIN_FILE=${env.VCPKG_INSTALLATION_ROOT}\scripts\buildsystems\vcpkg.cmake -G "Visual Studio 16 2019"
+        cmake -DCMAKE_TOOLCHAIN_FILE=${env.VCPKG_INSTALLATION_ROOT}\scripts\buildsystems\vcpkg.cmake -G "Visual Studio 16 2019" ${env.GITHUB_WORKSPACE}\freeachtung
         msbuild ALL_BUILD.vcxproj -property:Configuration=Release
