--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         vcpkgArguments: '@${{ env.vcpkgResponseFile }}'
         vcpkgDirectory: '${{ github.workspace }}\external\vcpkg'
-        vcpkgTriplet: vcpkgTriplet
+        vcpkgTriplet: x64-windows
 
     - name: Build
       uses: lukka/run-cmake@v1.4
