Support Windows build and use Github Actions for CI

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -3,4 +3,6 @@ add_subdirectory(fmt)
 option(toml11_BUILD_TEST OFF)
 add_subdirectory(toml11)
 
-add_subdirectory(googletest)
+if (NOT MSVC)
+    add_subdirectory(googletest)
+endif()
